db details are added to yml file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,9 @@ jobs:
           script: |
             docker load < employee-app.tar
             docker stop employee-app || true && docker rm employee-app || true
-            docker run -d --name employee-app -p 8080:8080 employee-app
+            docker run -d --name employee-app \
+              -e DB_URL=${{ secrets.DB_URL }} \
+              -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
+              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+              -p 8080:8080 employee-app
+ 
