--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,8 +51,11 @@ jobs:
             docker load < employee-app.tar
             docker stop employee-app || true && docker rm employee-app || true
             docker run -d --name employee-app \
-              -e DB_URL=${{ secrets.DB_URL }} \
-              -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
-              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+              -e SPRING_DATASOURCE_URL=${{ secrets.DB_URL }} \
+              -e SPRING_DATASOURCE_USERNAME=${{ secrets.DB_USERNAME }} \
+              -e SPRING_DATASOURCE_PASSWORD=${{ secrets.DB_PASSWORD }} \
+              -e SPRING_DATASOURCE_DRIVER-CLASS-NAME=org.postgresql.Driver \
+              -e SPRING_JPA_HIBERNATE_DDL-AUTO=update \
+              -e SPRING_JPA_DATABASE-PLATFORM=org.hibernate.dialect.PostgreSQLDialect \
               -p 8080:8080 employee-app
  
