--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,7 +42,7 @@ jobs:
           terraform_version: '1.6.0'
 
       - name: 'Configure AWS Credentials (using Access Keys)'
-        if: ${{ secrets.AWS_ACCESS_KEY_ID != '' }}
+        if: ${{ secrets.AWS_ACCESS_KEY_ID != null && secrets.AWS_ACCESS_KEY_ID != '' }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -51,10 +51,9 @@ jobs:
 
 
       - name: 'Configure AWS Credentials (OIDC)'
-        if: ${{ secrets.AWS_ACCESS_KEY_ID == '' }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::YOUR_AWS_ACCOUNT_ID:role/YOUR_GITHUB_ACTIONS_ROLE_NAME
+          role-to-assume: arn:aws:iam::963374505395:role/GitHubActionsTerraformEmployeeRole
           aws-region: ${{ env.AWS_REGION }}
 
       - name: 'Terraform Init'
