--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,7 +20,7 @@ jobs:
     env:
       TF_VAR_db_password: ${{ secrets.TF_VAR_DB_PASSWORD }}
       TF_VAR_docker_password: ${{ secrets.TF_VAR_DOCKER_PASSWORD }}
-      TF_VAR_allowed_ssh_ip: ${{ secrets.TF_VAR_ALLOWED_SSH_IP }}
+      TF_VAR_allowed_ssh_ip: ${{ secrets.TF_VAR_ALLOWED_SSH_IP }} # Ensure this secret exists or provide a default
 
       AWS_REGION: ${{ vars.AWS_REGION || 'eu-west-1' }}
       TF_VAR_docker_username: ${{ vars.TF_VAR_DOCKER_USERNAME || 'bakituncer' }}
@@ -38,22 +38,24 @@ jobs:
       - name: 'Set up Terraform'
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: '1.6.0' # Specify your desired Terraform version
+          terraform_version: '1.6.0'
 
       # Step 1: Try to configure AWS Credentials using OIDC (Recommended)
       - name: 'Configure AWS Credentials (OIDC)'
-        # This step will only run if AWS_ACCESS_KEY_ID secret is NOT provided, or is empty.
-        # This prioritizes OIDC if access keys are not explicitly set.
-        if: ${{ (secrets.AWS_ACCESS_KEY_ID == null || secrets.AWS_ACCESS_KEY_ID == '') && secrets.OIDC_ROLE_TO_ASSUME != null && secrets.OIDC_ROLE_TO_ASSUME != '' }}
+        # This step will run if AWS_ACCESS_KEY_ID secret is EMPTY (or not set)
+        # AND OIDC_ROLE_TO_ASSUME secret is NOT EMPTY and set.
+        # 👇 CORRECTED IF CONDITION 👇
+        if: ${{ secrets.AWS_ACCESS_KEY_ID == '' && secrets.OIDC_ROLE_TO_ASSUME != '' }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.OIDC_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ secrets.OIDC_ROLE_TO_ASSUME }} # Use a secret for the role ARN
           aws-region: ${{ env.AWS_REGION }}
 
-      # Step 2: Fallback to Access Keys if OIDC is not configured or intended
+      # Step 2: Fallback to Access Keys if OIDC is not configured or access keys are explicitly provided
       - name: 'Configure AWS Credentials (using Access Keys)'
-        # This step will only run if AWS_ACCESS_KEY_ID secret IS provided and not empty.
-        if: ${{ secrets.AWS_ACCESS_KEY_ID != null && secrets.AWS_ACCESS_KEY_ID != '' }}
+        # This step will run if AWS_ACCESS_KEY_ID secret is NOT EMPTY and set.
+        # 👇 CORRECTED IF CONDITION 👇
+        if: ${{ secrets.AWS_ACCESS_KEY_ID != '' }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -77,7 +79,7 @@ jobs:
         with:
           name: tfplan
           path: tfplan
-          if-no-files-found: error # Plan file must exist
+          if-no-files-found: error
 
       - name: 'Terraform Apply (Only on push to main branch)'
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
