--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,10 +42,7 @@ jobs:
 
       # Step 1: Try to configure AWS Credentials using OIDC (Recommended)
       - name: 'Configure AWS Credentials (OIDC)'
-        # This step will run if AWS_ACCESS_KEY_ID secret is EMPTY (or not set)
-        # AND OIDC_ROLE_TO_ASSUME secret is NOT EMPTY and set.
-        # 👇 CORRECTED IF CONDITION 👇
-        if: ${{ secrets.AWS_ACCESS_KEY_ID == '' && secrets.OIDC_ROLE_TO_ASSUME != '' }}
+        if: ${{ secrets.AWS_ACCESS_KEY_ID }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.OIDC_ROLE_TO_ASSUME }} # Use a secret for the role ARN
@@ -55,7 +52,7 @@ jobs:
       - name: 'Configure AWS Credentials (using Access Keys)'
         # This step will run if AWS_ACCESS_KEY_ID secret is NOT EMPTY and set.
         # 👇 CORRECTED IF CONDITION 👇
-        if: ${{ secrets.AWS_ACCESS_KEY_ID != '' }}
+        if: ${{ secrets.AWS_ACCESS_KEY_ID }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
