--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=employee
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/cfy
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 server.port=8080
