--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
+        working-directory: ./terraform
         run: terraform plan -no-color -out=tfplan
         env:
           TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
@@ -70,6 +71,7 @@ jobs:
       - name: Update Pull Request with Plan
         uses: actions/github-script@v7
         if: github.event_name == 'pull_request'
+        working-directory: ./terraform
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         with:
