--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,6 +19,9 @@ jobs:
   terraform:
     name: Terraform
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./terraform
 
     steps:
 
@@ -61,7 +64,6 @@ jobs:
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
-        working-directory: ./terraform
         run: terraform plan -no-color -out=tfplan
         env:
           TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
@@ -86,7 +88,6 @@ jobs:
 
       - name: Terraform Apply
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        working-directory: ./terraform
         run: terraform apply -auto-approve
         env:
           TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
